# anomalydet_internship

./: anomaly_detection.ipynb  main.py  provami.py  pyproject.toml
